--- a/src/Kooco.Pikachu.Blazor/Pages/VoidInvoices/VoidInvoice.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/VoidInvoices/VoidInvoice.razor
@@ -1,4 +1,4 @@
-﻿@page "/CashFlowManagement/CashFlowReconciliationStatement"
+﻿@page "/VoidInvoice"
 @using Kooco.Pikachu.EnumValues;
 @using Kooco.Pikachu.Localization;
 @using Kooco.Pikachu.OrderItems;
@@ -28,20 +28,20 @@
                 </div>
                 
             </div>
-            @if (Orders.Where(x => x.IsSelected).Count() != 1 || Orders.Any(x => x.IsSelected && x.IsVoidInvoice))
+          @*   @if (Orders.Where(x => x.IsSelected).Count() != 1 || Orders.Any(x => x.IsSelected && x.CreditNoteDate!=null))
             {
                 <Button Type="@ButtonType.Button" disabled Class="ms-1 btn btn-sm btn-primary">
                     <i class="fa fa-print"></i>
-                    @L["VoidInvoice"]
+                    @L["IssueCreditNote"]
                 </Button>
             }
             else
-            {
+            { *@
                 <Button Type="@ButtonType.Button" Clicked="() => OpenVoidReasonModal()" Class="ms-1 btn btn-sm btn-primary">
                     <i class="fa fa-print"></i>
-                    @L["VoidInvoice"]
+                    @L["IssueCreditNote"]
                 </Button>
-            }
+            @* } *@
             <Button Type="ButtonType.Button" Class="btn btn-sm btn-outline-dark" Clicked="DownloadExcel"><i class="fa fa-arrow-down"></i></Button>
            
 
@@ -78,7 +78,7 @@
                             @L[context.OrderNo]
                         </DisplayTemplate>
                     </DataGridColumn>
-                    <DataGridColumn Field="@nameof(OrderDto.LastModificationTime)" Caption="@L["LastUpDateDate"]" />
+                    <DataGridColumn Field="@nameof(OrderDto.InvoiceDate)" Caption="@L["IssueDate"]" />
                   @*   <DataGridColumn Field="@nameof(OrderDto.CustomerName)" Caption="@L["CustomerName"]" />
                     <DataGridColumn Field="@nameof(OrderDto.CustomerEmail)" Caption="@L["Email"]" /> *@
                     <DataGridColumn Field="@nameof(OrderDto.IssueStatus)" Caption="@L["InvoiceStatus"]">
@@ -97,11 +97,13 @@
                             $ @context.TotalAmount.ToString("N2")
                         </DisplayTemplate>
                     </DataGridColumn>
-                    <DataGridColumn Field="@nameof(OrderDto.LastModifierId)" Caption="@L["Editor"]">
-                        <DisplayTemplate>
-                            @L[context.LastModifierId.ToString()]
-                        </DisplayTemplate>
-                    </DataGridColumn>
+                    <DataGridColumn Field="@nameof(OrderDto.VoidDate)" Caption="@L["VoidDate"]" />
+                    <DataGridColumn Field="@nameof(OrderDto.VoidUser)" Caption="@L["VoidUser"]"/>
+                        
+                    <DataGridColumn Field="@nameof(OrderDto.CreditNoteDate)" Caption="@L["CreditNoteDate"]" />
+                    <DataGridColumn Field="@nameof(OrderDto.CreditNoteUser)" Caption="@L["CreditNoteUser"]"/>
+                      
+                    
                 </DataGridColumns>
                 <DetailRowTemplate>
                     @{
@@ -110,55 +112,15 @@
                             <table>
                                 <tbody>
                                     <tr>
-                                        <td>@L["RecipientInformation"]</td>
-                                        <td>@context.CustomerName / @context.CustomerPhone</td>
+                                        <td>@L["VoidReason"]</td>
+                                        <td>@context.VoidReason </td>
                                     </tr>
                                     <tr>
-                                        <td>@L["ShippingMethod"]</td>
-                                        <td>@L[context.DeliveryMethod.ToString()]</td>
+                                        <td>@L["CreditNoteReason"]</td>
+                                        <td></td>
                                     </tr>
-                                    <tr>
-                                        <td>@L["Address"]</td>
-                                        <td class="d-none">@context.AddressDetails, @context.Road, @context.District, @context.City</td>
-                                        <td>@context.AddressDetails</td>
-                                    </tr>
-                                    <tr>
-                                        <td>@L["Remarks"]</td>
-                                        <td>@context.Remarks</td>
-                                    </tr>
-                                    <tr>
-                                        <td>@L["MerchantRemarks"]</td>
-                                        <td>@context.Remarks</td>
-                                    </tr>
-                                    <tr>
-                                        <td>@L["OrderItems"]</td>
-                                        <td>
-                                            @foreach (var item in orderItems)
-                                            {
-                                                @if (item.ItemType == ItemType.Item)
-                                                {
-                                                    <div mb-1>
-                                                        <span>@item.Spec</span>
-                                                        <span>@item.Item?.ItemName x @item.Quantity</span>
-                                                    </div>
-                                                }
-                                                @if (item.ItemType == ItemType.SetItem)
-                                                {
-                                                    <div mb-1>
-                                                        <span>@item.Spec</span>
-                                                        <span>@item.SetItem?.SetItemName x @item.Quantity</span>
-                                                    </div>
-                                                }
-                                                @if (item.ItemType == ItemType.Freebie)
-                                                {
-                                                    <div mb-1>
-                                                        <span>@item.Spec</span>
-                                                        <span>@item.Freebie?.ItemName x @item.Quantity</span>
-                                                    </div>
-                                                }
-                                            }
-                                        </td>
-                                    </tr>
+                                  
+                                  
                                 </tbody>
                             </table>
                         </div>
@@ -167,12 +129,12 @@
             </DataGrid>
         </CardBody>
     </Card>
-      <Modal @ref="CreateVoidReasonModal">
+      <Modal @ref="CreateCreditNoteReasonModal">
       
         <ModalContent IsCentered="true">
-            <EditForm Model="@VoidReason" OnValidSubmit="ApplyVoidReasonAsync">
+            <EditForm Model="@CreditReason" OnValidSubmit="ApplyCreditReasonAsync">
                 <ModalHeader>
-                    <ModalTitle>@L["VoidReason"]</ModalTitle>
+                    <ModalTitle>@L["CreditReason"]</ModalTitle>
                         <CloseButton Clicked="CloseVoidReasonModal"  />
                     </ModalHeader>
                     <ModalBody>
@@ -180,10 +142,10 @@
                         <DataAnnotationsValidator />
                     
                     <div class="row my-2">
-                        <label class="form-label">@L["VoidReason"]</label>
+                        <label class="form-label">@L["CreditReason"]</label>
                         <div class="col-12 mb-2">
-                            <InputText class="form-control" @bind-Value="@VoidReason.Reason"></InputText>
-                            <ValidationMessage For="@(() => VoidReason.Reason)" />
+                            <InputText class="form-control" @bind-Value="@CreditReason.Reason"></InputText>
+                            <ValidationMessage For="@(() => CreditReason.Reason)" />
                         </div>
                     </div>
                 </ModalBody>
